<resources>
    <string name="app_name">Firebase-master</string>
    <string name="count_event">count button click event</string>
    <string name="crash_button_introduce">Click this button will crash, just for test crashlytics!</string>
    <string name="left_string">left</string>
    <string name="center_string">center</string>
    <string name="right_string">right</string>
    <string name="crash_button">Crash Button</string>
    <string name="next">next</string>
    <string name="second_activity">Second Activity</string>
    <string name="third_activity">Third Activity</string>
    <string name="msg_subscribed">msg subscribed</string>
    <string name="msg_subscribe_failed">msg subscribed failed</string>
</resources>
